Adding the code for user login and re-stucturing the code

--- a/static/Login.html
+++ b/static/Login.html
@@ -10,12 +10,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/owl.carousel.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/magnific-popup.css" type="text/css">
-  <link rel="stylesheet" href="static/css/slicknav.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
+  <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
+  <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/slate/bootstrap.min.css>
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
   <!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
@@ -24,8 +24,8 @@
   <header class="header-section">
     <div class="container">
         <div class="logo">
-            <a href="templates/index.html">
-                <img src="static/images/Nutrometer.png"></img>
+            <a href="index.html">
+                <img src="Nutrometer.png"></img>
             </a>
         </div>
         <div class="nav-menu">
@@ -39,28 +39,28 @@
                   <li><a href="./contact.html">Contacts</a></li>
               </ul>
             </nav>
-          <a href="static/New_user.html" class="primary-btn signup-btn">Create Account</a>
-          <a href="static/form.html" class="primary-btn signup-btn">User Login</a>
+          <!-- <a href="#" class="primary-btn signup-btn">Create Account</a> -->
+          <!-- <a href="#" class="primary-btn signup-btn">User Login</a> -->
         </div>
     </div>
   </header>
   
-  <section class="hero-section set-bg" data-setbg="images/food.jpg">
+  <!-- <section class="hero-section set-bg" data-setbg="food.jpg">
     <div class="container">
         <div class="row">
             <div class="col-md-8">
               <div class="hero-image">
                 <div class="hero-text">
-                    <span>You are what you eat</span>
-                    <h1>Nutrition Tracker</h1>
-                    <p>Log your daily food intake and monitor your nutrition over time<br /> Nutional information to make informed dietary choices</p>
-                    <a href="#" class="primary-btn">Read More</a>
-                </div>
+                    <span>FITNESS ELEMENTS</span> -->
+                    <!-- <h1>BMI CALCULATOR</h1>
+                    <p>Gutim comes packed with the user-friendly BMI Calculator<br /> shortcode which lets</p>
+                    <a href="#" class="primary-btn">Read More</a> -->
+                <!-- </div>
               </div>
             </div>
         </div>
     </div>
-  </section>
+  <!-- </section> -->
   <!-- </header> -->
 </div>
 <!-- Header End -->
@@ -75,27 +75,27 @@
       <li><a href="http://www.free-css.com/">Recomendations</a></li>
       <li><a href="http://www.free-css.com/">CSS Reference</a></li>
     </ul>
-  </div> -->
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="thumbnail">
         <!-- <img src="Nutrometer.png" alt="..." class="img-thumbnail"> -->
-        </div>
-      </div>
-    </div>
-  </div>
+        <!-- </div>
+      <!-- </div> -->
+    <!-- </div> -->
+  <!-- </div> -->
   
-  <!-- <section class="register-section spad">
+  <section class="register-section spad">
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
                 <div class="register-text">
                     <div class="section-title">
-                        <h2>Register Now</h2>
+                        <h2>New User Info</h2>
                         <!-- <p>The First 7 Day Trial Is Completely Free With The Teacher</p> -->
-                    <!-- </div> -->
-                    <!-- <form action="#" class="register-form">
+                    </div>
+                    <form action="#" class="register-form">
                         <div class="row">
                             <div class="col-lg-6">
                                 <label for="name">First Name</label>
@@ -115,8 +115,8 @@
                             </div>
                         </div>
                         <button type="submit" class="register-btn">Get Started</button>
-                    </form> -->
-                <!-- </div> -->
+                    </form>
+                </div>
             </div>
             <div class="col-lg-4">
                 <!-- <div class="register-pic">
@@ -125,7 +125,7 @@
             </div>
         </div>
     </div>
-</section><div class="row"> -->
+</section><div class="row">
     <div class="col-md-12">
     <!-- <img class="Nutrometer" src="Nutrometer.png"> -->
     </div>
