changed log for all webite pages, added nutiritonal_metrics, login and updated user_metrics

--- a/nutritional_metrics.html
+++ b/nutritional_metrics.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="zxx"></html>
@@ -39,8 +38,8 @@
                   <li><a href="./contact.html">Contacts</a></li>
               </ul>
             </nav>
-          <a href="./New_user.html" class="primary-btn signup-btn">Create Account</a>
-          <a href="./Login.html" class="primary-btn signup-btn">User Login</a>
+          <a href="./user_metrics.html" class="primary-btn signup-btn">Enter Food Intake</a>
+          <!-- <a href="./Login.html" class="primary-btn signup-btn">User Login</a> -->
         </div>
     </div>
   </header>
@@ -51,10 +50,10 @@
             <div class="col-md-8">
               <div class="hero-image">
                 <div class="hero-text">
-                    <span>You are what you eat</span>
+                    <span>Nutitrition</span>
                     <h1>Nutrition Tracker</h1>
                     <p>Log your daily food intake and monitor your nutrition over time<br /> Nutional information to make informed dietary choices</p>
-                    <a href="#" class="primary-btn">Read More</a>
+                    <a href="#" class="primary-btn">Show Chart</a>
                 </div>
               </div>
             </div>
