--- a/Login.html
+++ b/Login.html
@@ -10,12 +10,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-  <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-  <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="static/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="static/css/owl.carousel.min.css" type="text/css">
+  <link rel="stylesheet" href="static/css/magnific-popup.css" type="text/css">
+  <link rel="stylesheet" href="static/css/slicknav.min.css" type="text/css">
+  <link rel="stylesheet" href="static/css/style.css" type="text/css">
   <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/slate/bootstrap.min.css>
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
   <!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="logo">
             <a href="index.html">
-                <img src="Nutrometer.png"></img>
+                <img src="static/images/Nutrometer.png"></img>
             </a>
         </div>
         <div class="nav-menu">
@@ -39,7 +39,7 @@
                   <li><a href="./contact.html">Contacts</a></li>
               </ul>
             </nav>
-          <!-- <a href="#" class="primary-btn signup-btn">Create Account</a> -->
+          <!-- <a href="#" class="primary-btn signup-btn">Create Account</a>
           <!-- <a href="#" class="primary-btn signup-btn">User Login</a> -->
         </div>
     </div>
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-  <!-- </section> -->
+  </section> --> 
   <!-- </header> -->
 </div>
 <!-- Header End -->
@@ -82,9 +82,9 @@
         <div class="thumbnail">
         <!-- <img src="Nutrometer.png" alt="..." class="img-thumbnail"> -->
         <!-- </div>
-      <!-- </div> -->
-    <!-- </div> -->
-  <!-- </div> -->
+      </div>
+    </div>
+  </div> -->
   
   <section class="register-section spad">
     <div class="container">
@@ -92,29 +92,93 @@
             <div class="col-lg-8">
                 <div class="register-text">
                     <div class="section-title">
-                        <h2>New User Info</h2>
+                        <h2>Login</h2>
                         <!-- <p>The First 7 Day Trial Is Completely Free With The Teacher</p> -->
                     </div>
                     <form action="#" class="register-form">
                         <div class="row">
                             <div class="col-lg-6">
+                              <label for="name">User Name</label>
+                              <input type="text" id="username">
+                            </div>
+                            <div class="col-lg-6">
+                              <label for="name">Password</label>
+                              <input type="text" id="password">
+                            </div>
+                            <!-- <div class="col-lg-6">
                                 <label for="name">First Name</label>
                                 <input type="text" id="name">
                             </div>
                             <div class="col-lg-6">
-                                <label for="email">Your email address</label>
-                                <input type="text" id="email">
-                            </div>
-                            <div class="col-lg-6">
                                 <label for="last-name">Last Name</label>
-                                <input type="text" id="last-name">
-                            </div>
+                                <input type="text" id="last-name">                           
+                              </div>
                             <div class="col-lg-6">
+                                <label for="name">Gender</label>
+                                <input type="text" id="gender">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                                <label for="email">Your email address</label>
+                                <input type="text" id="email"> -->
+                            <!-- </div> -->
+                            <!-- <div class="col-lg-6">
                                 <label for="mobile">Mobile No*</label>
                                 <input type="text" id="mobile">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Date of birth</label>
+                              <input type="text" id="date_of_birth">
                             </div>
-                        </div>
-                        <button type="submit" class="register-btn">Get Started</button>
+                            <div class="col-lg-6">
+                              <label for="mobile">Height</label>
+                              <input type="text" id="height">
+                            </div>
+                            <div class="col-lg-6">
+                              <label for="mobile">Weight</label>
+                              <input type="text" id="weight">
+                            </div>
+                            <div class="col-lg-6">
+                              <label for="mobile">Physical activity Level</label>
+                              <input type="text" id="physical_activity_level">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">City</label>
+                              <input type="text" id="city">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">State</label>
+                              <input type="text" id="state">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Country</label>
+                              <input type="text" id="country">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Address</label>
+                              <input type="text" id="address">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Phone Number</label>
+                              <input type="text" id="phone_number">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">email</label>
+                              <input type="text" id="email">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Occupation</label>
+                              <input type="text" id="occupation">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Education</label>
+                              <input type="text" id="education">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Insurance</label>
+                              <input type="text" id="insurance">
+                            </div> -->
+                                </div>
+                                <button type="submit" class="register-btn">Login</button>
                     </form>
                 </div>
             </div>
