--- a/user_metrics.html
+++ b/user_metrics.html
@@ -10,12 +10,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-  <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-  <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="static/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="static/css/owl.carousel.min.css" type="text/css">
+  <link rel="stylesheet" href="static/css/magnific-popup.css" type="text/css">
+  <link rel="stylesheet" href="static/css/slicknav.min.css" type="text/css">
+  <link rel="stylesheet" href="static/css/style.css" type="text/css">
   <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/slate/bootstrap.min.css>
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
   <!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="logo">
             <a href="index.html">
-                <img src="Nutrometer.png"></img>
+                <img src="static/images/Nutrometer.png"></img>
             </a>
         </div>
         <div class="nav-menu">
@@ -39,33 +39,33 @@
                   <li><a href="./contact.html">Contacts</a></li>
               </ul>
             </nav>
-          <a href="#" class="primary-btn signup-btn">Create Account</a>
-          <a href="#" class="primary-btn signup-btn">User Login</a>
+          <!-- <a href="#" class="primary-btn signup-btn">Create Account</a>
+          <!-- <a href="#" class="primary-btn signup-btn">User Login</a> -->
         </div>
     </div>
   </header>
   
-  <section class="hero-section set-bg" data-setbg="food.jpg">
+  <!-- <section class="hero-section set-bg" data-setbg="food.jpg">
     <div class="container">
         <div class="row">
             <div class="col-md-8">
               <div class="hero-image">
                 <div class="hero-text">
                     <span>FITNESS ELEMENTS</span> -->
-                    <h1>BMI CALCULATOR</h1>
+                    <!-- <h1>BMI CALCULATOR</h1>
                     <p>Gutim comes packed with the user-friendly BMI Calculator<br /> shortcode which lets</p>
                     <a href="#" class="primary-btn">Read More</a> -->
-                </div>
+                <!-- </div>
               </div>
             </div>
         </div>
     </div>
-  </section>
+  </section> --> 
   <!-- </header> -->
 </div>
 <!-- Header End -->
 
-  <div id="menu">
+  <!-- <div id="menu">
     <h1>Tracking</h1>
     <ul>
       <li><a href="http://www.free-css.com/">Meals</a></li>
@@ -81,10 +81,10 @@
       <div class="col-md-12">
         <div class="thumbnail">
         <!-- <img src="Nutrometer.png" alt="..." class="img-thumbnail"> -->
-        </div>
+        <!-- </div>
       </div>
     </div>
-  </div>
+  </div> -->
   
   <section class="register-section spad">
     <div class="container">
@@ -92,29 +92,93 @@
             <div class="col-lg-8">
                 <div class="register-text">
                     <div class="section-title">
-                        <h2>Register Now</h2>
+                        <h2>Daily Food Intake</h2>
                         <!-- <p>The First 7 Day Trial Is Completely Free With The Teacher</p> -->
                     </div>
                     <form action="#" class="register-form">
                         <div class="row">
-                            <div class="col-lg-6">
-                                <label for="name">First Name</label>
+                            <div class="col-lg-12">
+                              <label for="name">Breakfast</label>
+                              <input type="text" id="username">
+                            </div>
+                            <div class="col-lg-12">
+                              <label for="name">Lunch</label>
+                              <input type="text" id="password">
+                            </div>
+                            <div class="col-lg-12">
+                                <label for="name">Dinner</label>
                                 <input type="text" id="name">
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-12">
+                                <label for="last-name">Snack</label>
+                                <input type="text" id="last-name">                           
+                              </div>
+                            <div class="col-lg-12">
+                                <label for="name">Water</label>
+                                <input type="text" id="gender">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
                                 <label for="email">Your email address</label>
-                                <input type="text" id="email">
-                            </div>
-                            <div class="col-lg-6">
-                                <label for="last-name">Last Name</label>
-                                <input type="text" id="last-name">
-                            </div>
-                            <div class="col-lg-6">
+                                <input type="text" id="email"> -->
+                            <!-- </div> -->
+                            <!-- <div class="col-lg-6">
                                 <label for="mobile">Mobile No*</label>
                                 <input type="text" id="mobile">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Date of birth</label>
+                              <input type="text" id="date_of_birth">
                             </div>
-                        </div>
-                        <button type="submit" class="register-btn">Get Started</button>
+                            <div class="col-lg-6">
+                              <label for="mobile">Height</label>
+                              <input type="text" id="height">
+                            </div>
+                            <div class="col-lg-6">
+                              <label for="mobile">Weight</label>
+                              <input type="text" id="weight">
+                            </div>
+                            <div class="col-lg-6">
+                              <label for="mobile">Physical activity Level</label>
+                              <input type="text" id="physical_activity_level">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">City</label>
+                              <input type="text" id="city">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">State</label>
+                              <input type="text" id="state">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Country</label>
+                              <input type="text" id="country">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Address</label>
+                              <input type="text" id="address">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Phone Number</label>
+                              <input type="text" id="phone_number">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">email</label>
+                              <input type="text" id="email">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Occupation</label>
+                              <input type="text" id="occupation">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Education</label>
+                              <input type="text" id="education">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Insurance</label>
+                              <input type="text" id="insurance">
+                            </div> -->
+                                </div>
+                                <button type="submit" class="register-btn">Submit</button>
                     </form>
                 </div>
             </div>
